--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body onload="getNextSpaetzleDay()">
         <div>
-            <p>Next time Spätzle on: </p>
+            <p>Spätzle available on (up to 30 days): </p>
             <div id="spaetzle-counter"></div>
         </div>
     </body>
