Fixed Spaetzle-Ticker for new Version of Speiseplan

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <meta charset="utf-8">
     </head>
 
-    <body onload="getNextSpaetzleDay()">
+    <body onload="get_spaetzle_days()">
         <div>
-            <p>Spätzle available on (up to 30 days): </p>
+            <p>Spätzle available on (up to 10 days): </p>
             <div id="spaetzle-counter"></div>
         </div>
     </body>
