Add calendar events and social share button

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <body onload="get_spaetzle_days()">
         <div>
-            <p>Spätzle available on (up to 10 days): </p>
+            <p>Spätzle next available on: </p>
             <div id="spaetzle-counter"></div>
         </div>
     </body>
